[tool.poetry]
name = "bravetogether-backend"
version = "0.1.0"
description = "Sexual Harrassment has no place in our world but is still a common issue in a woman's life. Share your experience and I analyze the outcome to fight against it in unity."
authors = ["Philipp Page <github@philipp-page.de>"]
readme = "README.md"
packages = [{ include = "bravetogether_backend" }]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
chalice = "^1.27.3"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
files = "bravetogether_backend"
